--- a/index.html
+++ b/index.html
@@ -8,56 +8,52 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header>
-    <h1>Casa LYNE</h1>
-    <p>Diseño con corazón, hogares con vida</p>
-  </header>
+  <div class="hero">
+    <img src="images/portada.jpg" alt="Cocina moderna Casa LYNE" class="hero-image" />
+    <div class="buttons">
+      <a href="#cocinas"><img src="images/logo.png" alt="Logo"> Cocinas</a>
+      <a href="#closets"><img src="images/logo.png" alt="Logo"> Clósets</a>
+      <a href="#banos"><img src="images/logo.png" alt="Logo"> Baños</a>
+      <a href="#estantes"><img src="images/logo.png" alt="Logo"> Estantes</a>
+      <a href="#puertas"><img src="images/logo.png" alt="Logo"> Puertas</a>
+    </div>
+  </div>
 
   <section id="cocinas">
     <h2>Cocinas</h2>
     <div class="slider">
-      <img src="images/cocina1.jpg" alt="Cocina integral 1" />
-      <img src="images/cocina2.jpg" alt="Cocina integral 2" />
+      <img src="images/cocina1.jpg" alt="Cocina 1" />
+      <img src="images/cocina2.jpg" alt="Cocina 2" />
     </div>
   </section>
 
   <section id="closets">
     <h2>Clósets</h2>
     <div class="slider">
-      <img src="images/closet1.jpg" alt="Clóset moderno" />
-      <img src="images/closet2.jpg" alt="Clóset funcional" />
+      <img src="images/closet1.jpg" alt="Clóset 1" />
+      <img src="images/closet2.jpg" alt="Clóset 2" />
     </div>
   </section>
 
   <section id="banos">
-    <h2>Muebles de Baño</h2>
+    <h2>Baños</h2>
     <div class="slider">
-      <img src="images/bano1.jpg" alt="Mueble de baño 1" />
+      <img src="images/bano1.jpg" alt="Baño 1" />
+    </div>
+  </section>
+
+  <section id="estantes">
+    <h2>Estantes</h2>
+    <div class="slider">
+      <img src="images/estante1.jpg" alt="Estante 1" />
     </div>
   </section>
 
   <section id="puertas">
     <h2>Puertas</h2>
     <div class="slider">
-      <img src="images/puerta1.jpg" alt="Puerta elegante" />
+      <img src="images/puerta1.jpg" alt="Puerta 1" />
     </div>
   </section>
-
-  <section id="estantes">
-    <h2>Estanterías y Muebles Auxiliares</h2>
-    <div class="slider">
-      <img src="images/estante1.jpg" alt="Estantería moderna" />
-    </div>
-  </section>
-
-  <footer>
-    <p><strong>Gracias por dejarnos entrar en tu hogar.</strong></p>
-    <p>En Casa LYNE diseñamos cada mueble con amor, pensando en esos rincones que hacen especial tu casa.</p>
-    <p>Creemos que cada espacio cuenta, cada detalle importa, y que los hogares con vida se construyen con corazón.</p>
-    <p>¡Bienvenidos a nuestra familia!</p>
-    <p>📞 Contáctanos: +57 301 694 7418</p>
-    <p>✉️ Email: casalyne.contacto@gmail.com</p>
-    <a href="https://wa.me/573016947418" target="_blank" class="whatsapp-btn">💬 Escríbenos por WhatsApp</a>
-  </footer>
 </body>
 </html>
