--- a/index.html
+++ b/index.html
@@ -55,5 +55,11 @@
       <img src="images/puerta1.jpg" alt="Puerta 1" />
     </div>
   </section>
+
+  <footer>
+    <p>📱 WhatsApp: 301 694 7418</p>
+    <p>✉️ Email: casalyne.contacto@gmail.com</p>
+    <p>© 2025 Casa LYNE. Todos los derechos reservados.</p>
+  </footer>
 </body>
 </html>
